some light formatting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Checkbox Race!</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☑️</text></svg>">
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☑️</text></svg>"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -12,7 +15,7 @@
       <input type="checkbox" disabled />
       <input type="checkbox" disabled />
       <input type="checkbox" disabled />
-       <input type="checkbox" disabled />
+      <input type="checkbox" disabled />
       <input type="checkbox" disabled />
       <input type="checkbox" disabled />
       <input type="checkbox" disabled />
@@ -117,7 +120,11 @@
         width="16"
         class="flag"
       >
-        <path d="m7 3h2v5h-2v-1h-2v-1h-1v-1h1v-1h2z" fill="#f00" class="flagPiece" />
+        <path
+          d="m7 3h2v5h-2v-1h-2v-1h-1v-1h1v-1h2z"
+          fill="#f00"
+          class="flagPiece"
+        />
         <path d="m8 8h1v2h1v1h2v2h-8v-2h2v-1h2z" />
       </svg>
 
