a useless web project

--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
       Check the first box and we're off to the races! <br /><br />↯
     </div>
 
+    <div class="sitter right">
+      <div class="watch">
+        A <a href="https://theuselessweb.com" target="_blank">Useless Web</a> Project
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
