--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
       Check the first box and we're off to the races! <br /><br />↯
     </div>
 
+    <div class="sitter left">
+      <a class="twitter" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fcheckboxrace.com&via=twholman&text=How%20fast%20can%20you%20complete%20the%20checkbox%20race%3F&hashtags=timewaster" target="_blank"></a>
+    </div>
+
     <div class="sitter right">
       <div class="watch">
         A <a href="https://theuselessweb.com" target="_blank">Useless Web</a> Project
