--- a/index.html
+++ b/index.html
@@ -3,6 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <title>Checkbox Race!</title>
+    <meta name="description" content="A racing game for quick clickers!" />
+
+    <meta property="og:title" content="Checkbox Race" />
+    <meta property="og:url" content="https://checkboxrace.com" />
+    <meta property="og:site_name" content="Checkbox Race" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="A racing game for quick clickers!"
+    />
+    <meta
+      property="og:image"
+      content="https://checkboxrace.com/img/share.png"
+    />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Checkbox Race" />
+    <meta name="twitter:url" content="https://checkboxrace.com" />
+    <meta
+      name="twitter:description"
+      content="A racing game for quick clickers!"
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://checkboxrace.com/img/share.png"
+    />
+
+
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☑️</text></svg>"
