--- a/index.html
+++ b/index.html
@@ -175,12 +175,13 @@
     </div>
 
     <div class="sitter left">
+      <a class="toms" href="https://toms.toys">🍅</a>
       <a class="twitter" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fcheckboxrace.com&via=twholman&text=How%20fast%20can%20you%20complete%20the%20checkbox%20race%3F&hashtags=timewaster" target="_blank"></a>
     </div>
 
     <div class="sitter right">
       <div class="watch">
-        A <a href="https://theuselessweb.com" target="_blank">Useless Web</a> Project
+        <a href="https://checkbox.toys" target="_blank">☑️ Checkbox Toys</a>
       </div>
     </div>
 
