useless web ref

--- a/index.html
+++ b/index.html
@@ -181,8 +181,13 @@
 
     <div class="sitter right">
       <div class="watch">
+        <a href="https://theuselessweb.com" target="_blank">🕺 The Useless Web</a> 
+      </div>
+      <div class="watch">
         <a href="https://checkbox.toys" target="_blank">☑️ Checkbox Toys</a>
       </div>
+
+      
     </div>
 
     <script src="./script.js"></script>
